added missing scripts

--- a/pierre_stuff/1.0/science/prologue.html
+++ b/pierre_stuff/1.0/science/prologue.html
@@ -760,5 +760,7 @@ MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
 })
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js'></script>
+<script src='../../../_/js/touchHover.js'></script>
   </body>
 </html>
