--- a/pierre_stuff/1.0/music/gorille.html
+++ b/pierre_stuff/1.0/music/gorille.html
@@ -148,6 +148,18 @@
 <div class="sect1">
 <h2 id="the-song"><a class="anchor" href="#the-song"></a>The song</h2>
 <div class="sectionbody">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The side-by-side columns of text may be misaligned when viewing on a mobile. If that happens, rotate the screen to view it in landscape mode.
+</td>
+</tr>
+</table>
+</div>  
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 50%;">
