--- a/pierre_stuff/1.0/music/3b.html
+++ b/pierre_stuff/1.0/music/3b.html
@@ -62,6 +62,9 @@
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="gorille.html">Le Gorille</a>
   </li>
+  <li class="nav-item is-current-page" data-depth="3">
+    <a class="nav-link" href="love_songs.html">Love songs</a>
+  </li>
 </ul>
   </li>
 </ul>
