added love songs

--- a/pierre_stuff/1.0/music/brassens.html
+++ b/pierre_stuff/1.0/music/brassens.html
@@ -62,6 +62,9 @@
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="gorille.html">Le Gorille</a>
   </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="love_songs.html">Love songs</a>
+  </li>
 </ul>
   </li>
 </ul>
@@ -167,7 +170,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>La Non Demande en Mariage</p>
+<p><a href="love_songs.html#nondemande" class="page">La Non Demande en Mariage</a></p>
 </li>
 <li>
 <p>Les Passantes</p>
