--- a/pierre_stuff/1.0/music/love_songs.html
+++ b/pierre_stuff/1.0/music/love_songs.html
@@ -65,6 +65,9 @@
   <li class="nav-item is-current-page" data-depth="3">
     <a class="nav-link" href="love_songs.html">Love songs</a>
   </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="songs_to_normal_people.html">Songs to "normal people"</a>
+  </li>
 </ul>
   </li>
 </ul>
