fixed xref to Penelope

--- a/pierre_stuff/1.0/music/brassens.html
+++ b/pierre_stuff/1.0/music/brassens.html
@@ -186,7 +186,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Pénélope</p>
+<p><a href="songs_to_normal_people.html#penelope" class="page">Pénélope</a></p>
 </li>
 </ul>
 </div>
