--- a/pierre_stuff/1.0/music/songs_to_normal_people.html
+++ b/pierre_stuff/1.0/music/songs_to_normal_people.html
@@ -210,10 +210,11 @@ Et la rançon de Pénélope (bis)<br></p></td>
 You, who have no snags in your wedding dress<br>
 You, uncompromising Penelope,<br>
 When ambling along your quiet happiness,<br>
-Don’t you ever nurse (in all honesty)<br>
+Don't you ever nurse (in all honesty)<br>
 Some lovely forbidden thoughts (encore)<br>
 <br>
 <br>
+<br>  
 Behind your curtains, in your "golden mean",<br>
 Awaiting the return of a suburban Ulysses,<br>
 Leaning over your needlework,<br>
@@ -237,10 +238,10 @@ Topples them from their pedestals, shakes up their virtue,<br>
 Rips off their fig leaves (encore)<br>
 <br>
 Have no fear that Heaven may hold it against you,<br>
-There’s really nothing there for which to lash a heart<br>
+There's really nothing there for which to lash a heart<br>
 That beats the countryside and gallops!<br>
-It’s a common fault and a venial sin,<br>
-It’s the hidden side of the honeymoon,<br>
+It's a common fault and a venial sin,<br>
+It's the hidden side of the honeymoon,<br>
 And the price to pay for Penelope (encore)</p></td>
 </tr>
 </tbody>
