--- a/pierre_stuff/1.0/music/songs_to_normal_people.html
+++ b/pierre_stuff/1.0/music/songs_to_normal_people.html
@@ -214,35 +214,35 @@ You, uncompromising Penelope,<br>
 When ambling along your quiet happiness,<br>
 Don't you ever nurse (in all honesty)<br>
 <br>
-Some lovely forbidden thoughts (encore)<br>
+Some lovely forbidden thoughts (2x)<br>
 <br> 
 Behind your curtains, in your "golden mean",<br>
 Awaiting the return of a suburban Ulysses,<br>
 Leaning over your needlework,<br>
 On evenings of wistfulness and melancholy<br>
 Have you never, in dreams, in the sky above another bed,<br>
-Counted some new stars (encore)<br>
+Counted some new stars (2x)<br>
 <br>
 Have you never yet wished for<br>
 The passing fling which grabs you by the hair,<br>
 Tells you sweet nothings<br>
 Puts the daisy into the kitchen garden,<br>
 The forbidden apple onto the orchard&#8217;s boughs,<br>
-And disorder in the lace of your clothes (encore)<br>
+And disorder in the lace of your clothes (2x)<br>
 <br>
 Have you never wished to meet on your path again<br>
 That angel, that demon who, his bow in his hand,<br>
 Fires malignant arrows,<br>
 Who restores the female flesh of the coldest statues,<br>
 Topples them from their pedestals, shakes up their virtue,<br>
-Rips off their fig leaves (encore)<br>
+Rips off their fig leaves (2x)<br>
 <br>
 Have no fear that Heaven may hold it against you,<br>
 There's really nothing there for which to lash a heart<br>
 That beats the countryside and gallops!<br>
 It's a common fault and a venial sin,<br>
 It's the hidden side of the honeymoon,<br>
-And the price to pay for Penelope (encore)</p></td>
+And the price to pay for Penelope (2x)</p></td>
 </tr>
 </tbody>
 </table>
