--- a/pierre_stuff/1.0/music/songs_to_normal_people.html
+++ b/pierre_stuff/1.0/music/songs_to_normal_people.html
@@ -207,11 +207,13 @@ C&#8217;est la faute commune<sup class="footnote">[<abbr title="Pun with 'la fos
 C&#8217;est la face cachée de la lune de miel<sup class="footnote">[<abbr title="I cannot overstate the exquisite delicacy of these last two lines. 'lune de miel' = honeymoon, is combined with 'la face cachée de la lune' = 'the dark side of the moon'. French uses 'cachée' (hidden) instead of 'sombre' (dark), therefore the phrase conveys no negative meaning: 'la face cachée de la lune de miel' perfectly pictures this secret 'flip side' of marital life, with a delightful mix of originality and delicate empathy… 100% Brassens. The last line that follows nicely underlines the same image, with the music to match (note that, in French, 'rançon' means 'ransom' but also the figurative price to pay for something positive that happens to you, e.g. 'la rançon du succès')… Wonderful stuff!">24</abbr>]</sup><br>
 Et la rançon de Pénélope (bis)<br></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">You, the model wife, the fairy of the home<br>
-You, who have no snags in your wedding dress<br>
+You, who have no snags in your<br> 
+wedding dress<br>
 <br>
 You, uncompromising Penelope,<br>
 When ambling along your quiet happiness,<br>
-Don't you ever nurse (in all honesty)<br>
+Don't you ever nurse<br>
+(in all honesty)<br>
 <br>
 Some lovely forbidden thoughts (2x)<br>
 <br> 
