added Passantes and Saturne

--- a/pierre_stuff/1.0/music/love_songs.html
+++ b/pierre_stuff/1.0/music/love_songs.html
@@ -299,6 +299,209 @@ May I think always.<br>
 </table>
 </div>
 </div>
+<div class="sect1">
+<h2 id="passantes"><a class="anchor" href="#passantes"></a>Les Passantes</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Our second love song is <em>Les Passantes</em>, about women you only meet for a few moments but who leave a lasting impression on you – the "feeling of a possibility". Brassens didn&#8217;t write the lyrics but fell in love with this poem by Antoine Pol as early as 1940. He made a song of it but, characteristically, reworked it for decades. In the 60s, he vainly tried to contact Pol to get his approval before (finally) publishing the song. Strange coincidence: in 1971, it&#8217;s Pol who contacted Brassens because he wanted to publish a book about him! He then learnt about the song Brassens had made with Les Passantes but, sadly, died before he had a chance to listen to it. What a shame, because it&#8217;s a masterpiece…</p>
+</div>
+<div class="paragraph">
+<p>Pol&#8217;s language is more straightforward than Brassens', therefore my comments will be shorter than usual. But, wonderfully highlighted by the music, this poem is irresistibly romantic… The romantic melody and Brassens' perfect diction, slightly "after the beat", give each word a special treatment. And, better than in any other song, the music treats us with "hanging moments", delays before key words that give them so much impact!</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Je veux dédier ce poème<br>
+À toutes les femmes qu&#8217;on aime<br>
+Pendant quelques instants secrets<sup class="footnote">[<abbr title="At this point of each verse, Brassens' music includes his trademark 'hanging moment' before delivering the last word of the line. In most verses, it is the perfect moment – just before the most poetic word of the verse.">30</abbr>]</sup><br>
+À celles qu&#8217;on connaît à peine<br>
+Qu&#8217;un destin différent entraîne<br>
+Et qu&#8217;on ne retrouve jamais<br>
+<br>
+À celle qu&#8217;on voit apparaître<br>
+Une seconde à sa fenêtre<br>
+Et qui, preste<sup class="footnote">[<abbr title="'preste' = formal term for 'deft and quick'">31</abbr>]</sup>, s&#8217;évanouit<sup class="footnote">[<abbr title="'s&#8217;évanouir' = 'to faint', but also, figuratively, 'to disappear'">32</abbr>]</sup><br>
+Mais dont la svelte silhouette<br>
+Est si gracieuse et fluette<sup class="footnote">[<abbr title="'fluette' is not easy to translate. Referring to a person, it means both 'thin' and 'fragile'.">33</abbr>]</sup><br>
+Qu&#8217;on en demeure épanoui<br>
+<br>
+À la compagne de voyage<br>
+Dont les yeux, charmant paysage<br>
+Font paraître court le chemin<br>
+Qu&#8217;on est seul, peut-être, à comprendre<br>
+Et qu&#8217;on laisse pourtant descendre<sup class="footnote">[<abbr title="Here, 'descendre' simply means 'get off' (the train or bus).">34</abbr>]</sup><br>
+Sans avoir effleuré sa main<br>
+<br>
+À celles qui sont déjà prises<sup class="footnote">[<abbr title="'déjà prises' = 'already with someone'&#8230;&#8203; could sound a bit macho today">35</abbr>]</sup><br>
+Et qui, vivant des heures grises<br>
+Près d&#8217;un être trop différent<sup class="footnote">[<abbr title="Beautiful wording here: the image of the 'grey hours', and the untranslatable 'près d&#8217;un être trop different'. It means 'with someone too different from them' but put in a much more poetic way. And the music&#8217;s hanging moment after 'trop', eventually followed by the non-judgmental 'different', is magical. Also note the lavish rhymes of this whole verse!">36</abbr>]</sup><br>
+Vous ont, inutile folie,<br>
+Laissé voir la mélancolie<br>
+D&#8217;un avenir désespérant<br>
+<br>
+Chères images aperçues<br>
+Espérances d&#8217;un jour déçues<sup class="footnote">[<abbr title="Beautiful stuff… 'd&#8217;un jour' conveys a subtle mix of 'that happened one day' and 'that only lasted for a day'…">37</abbr>]</sup><br>
+Vous serez dans l&#8217;oubli demain<br>
+Pour peu que le bonheur survienne<br>
+Il est rare qu&#8217;on se souvienne<br>
+Des épisodes du chemin<br>
+<br>
+Mais si l&#8217;on a manqué sa vie<br>
+On songe<sup class="footnote">[<abbr title="'songe', as a noun, means 'dream' (more formal and old-fashioned than 'rêve'). But as a verb, 'songer' has evolved towards 'to think, reflect, muse' (and still, although more rarely, 'to dream').">38</abbr>]</sup> avec un peu d&#8217;envie<br>
+À tous ces bonheurs entrevus<sup class="footnote">[<abbr title="'les bonheurs entrevus'… another very nice image. 'Les bonheurs entrevus' are not just the passantes, but also the 'glimpsed possibilities' of a happy life with them.">39</abbr>]</sup><br>
+Aux baisers qu&#8217;on n&#8217;osa pas prendre<br>
+Aux cœurs qui doivent vous attendre<br>
+Aux yeux qu&#8217;on n&#8217;a jamais revus<br>
+<br>
+Alors, aux<sup class="footnote">[<abbr title="Common writing would be 'les soirs de lassitude'. But 'aux soirs…' is much better here – you may have noted this uncommon-but-poetic use of 'à/au' in Brassens' own lyrics as well.">40</abbr>]</sup> soirs de lassitude<br>
+Tout en peuplant sa solitude<br>
+Des fantômes du souvenir<sup class="footnote">[<abbr title="Those three lines are wonderful by themselves, but with this hanging second before … 'souvenir'… I still remember the first time I listened to it. Already touched by the first lines, I waited… and then 'souvenir' hit me, quite unexpected because this meaning of 'souvenir' in the singular form is uncommon, and incredibly poetic… Perhaps my favourite line in all Brassens. Not written by him, but so beautifully wrapped in music!">41</abbr>]</sup><br>
+On pleure<sup class="footnote">[<abbr title="Can translate to 'cry for', but also 'mourn' ('pleurer quelqu&#8217;un' = 'to mourn someone').">42</abbr>]</sup> les lèvres absentes<br>
+De toutes ces belles passantes<br>
+Que l&#8217;on n&#8217;a pas su retenir<br></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">I want to dedicate this poem<br>
+To all the women we love<br>
+For a few secret moments<br>
+To those we barely know<br>
+Whom a different destiny carries away<br>
+And whom we never see again.<br>
+<br>
+To the one you see appear<br>
+For a second at the window<br>
+And who, swiftly, fades away<br>
+But whose slender figure<br>
+Is so graceful and delicate<br>
+That you remain radiant<br>
+<br>
+To the travelling companion<br>
+Whose eyes, charming landscape,<br>
+Make the road seem short<br>
+Whom you only, perhaps, can understand<br>
+And yet you let her get off<br>
+Without having grazed her hand<br>
+<br>
+To those who are already taken<br>
+And who, living grey hours<br>
+By too different a being,<br>
+Have, vain folly,<br>
+Let you see the melancholy<br>
+Of a despairing future<br>
+<br>
+Dear espied silhouettes<br>
+Unfulfilled expectations of a day<br>
+You will be in oblivion tomorrow<br>
+If happiness comes<br>
+One rarely remembers<br>
+The episodes of the road<br>
+<br>
+But if you&#8217;ve missed your life<br>
+You think with a twang of longing<br>
+Of all those glimpses of happiness<br>
+Of the kisses you didn&#8217;t dare take<br>
+Of the hearts that must be waiting for you<br>
+Of the eyes you never saw again<br>
+<br>
+Then, on evenings of weariness<br>
+While populating your solitude<br>
+With the ghosts of memory<br>
+You cry for the absent lips<br>
+Of all those beautiful women who passed by<br>
+Whom you were not able to retain<br></p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div class="sect1">
+<h2 id="saturne"><a class="anchor" href="#saturne"></a>Saturne</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Now, I promised to translate and comment parts of <em>Saturne</em>. Culture-riddled, featuring beautiful lyrics carried by a romantic and elaborate melody, it&#8217;s a trademark Brassens love song, dedicated to his ageing lover Püppchen. Saturn (Kronos for the ancient Greek, often confused with Chronos) was a Titan, master of Time<sup class="footnote">[<abbr title="Like Chronos! Confusing indeed, so much so that both characters are merged in many tales.">43</abbr>]</sup> and father of Jupiter/Zeus. Having been told that he would be overthrown by one of his sons, he had the questionable habit of devouring his male offspring (to no avail: Jupiter was saved by his mother and did overthrow his father). This, added to his identification with passing time, explains his association with melancholy and sadness. But he can&#8217;t spoil Brassens' love for his Püppchen…</p>
+</div>
+<div class="paragraph">
+<p>Here is the full song, but I only commented the trickiest phrases… and my favourite verses.</p>
+</div>
+<div class="paragraph">
+<p><em>(The last two lines of each verse are repeated twice, except in the last verse.)</em></p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Il est morne, il est taciturne<br>
+Il préside aux choses du temps<sup class="footnote">[<abbr title="Lovely way of saying 'he rules over everything that relates to time'. I wonder how the almost literal translation sounds in English!">44</abbr>]</sup><br>
+Il porte un joli nom, Saturne,<br>
+Mais c&#8217;est un Dieu fort inquiétant<br>
+<br>
+En allant son chemin, morose<br>
+Pour se désennuyer<sup class="footnote">[<abbr title="Literally 'to unbore himself'. I thought Brassens had made up that word, but apparently it exists in French!">45</abbr>]</sup> un peu<br>
+Il joue à bousculer les roses<br>
+Le temps tue le temps comme il peut<br>
+<br>
+Cette saison, c&#8217;est toi, ma belle<sup class="footnote">[<abbr title="Beware! This is one of my favourite verses from all of Brassens' repertoire. Amazingly inventive, intensely poetic, and filled with the singer&#8217;s celebrated tenderness for people.">46</abbr>]</sup>,<br>
+Qui as fait les frais<sup class="footnote">[<abbr title="'faire les frais de' means 'pay the price of' or 'bear the brunt of', depending on context. It&#8217;s an idiomatic phrase built on 'frais' = 'expenses' (nothing to do with 'frais' = 'fresh' nor 'frais' = 'cool'!)">47</abbr>]</sup> de son jeu<br>
+Toi qui as payé la gabelle<sup class="footnote">[<abbr title="'La gabelle' used to be a tax on salt. 'Payer la gabelle' refers to time taking its toll, but this metaphor is totally Brassens-invented. A French reader/listener will get it (she is paying something to time) but will find the image somewhat unusual… until the next line comes, where it all falls into place… the grain of salt is such a beautiful representation of the first hint of white in her hair, while referring to the cost of time&#8217;s 'gabelle'. So clever, original, elegant, evocative, with great phrasing too: 'grain de sel' echoes to 'la gabelle', and, as always, the rhythm of the music underlines that of the speech. I can&#8217;t get over it!">48</abbr>]</sup><br>
+Un grain de sel dans tes cheveux<br>
+<br>
+C&#8217;est pas vilain<sup class="footnote">[<abbr title="Note a gradual change towards informal language. Formal French would say 'Ce n&#8217;est pas…', and 'pas vilain' is a colloquial phrase for 'quite nice'.">49</abbr>]</sup>, les fleurs d&#8217;automne<br>
+Et tous les poètes l&#8217;ont dit<br>
+Je te regarde et je te donne<br>
+Mon billet<sup class="footnote">[<abbr title="'Je te donne mon billet que…' or 'Je te fiche mon billet que…': colloquial phrase  meaning 'I bet you that…'. 'billet' can be interpreted as the bank note you put on the table when betting, but originally referred to an older sense of this word: a certificate. Indeed, the meaning of the phrase is close to 'I certify that…'.">50</abbr>]</sup> qu&#8217;ils n&#8217;ont pas menti<br>
+<br>
+Viens encore, viens ma favorite<br>
+Descendons ensemble au jardin<br>
+Viens effeuiller la marguerite<sup class="footnote">[<abbr title="By now we are familiar with this frequent reference to playing loves me, loves me not.">51</abbr>]</sup><br>
+De l&#8217;été de la Saint-Martin<sup class="footnote">[<abbr title="Reference to Indian summer (Saint-Martin is celebrated in November). Standard French says 'l&#8217;été indien', but Brassens likes his own phrases…">52</abbr>]</sup><br>
+<br>
+Je sais par cœur toutes tes grâces<br>
+Et pour me les faire oublier<br>
+Il faudra que Saturne en fasse<sup class="footnote">[<abbr title="Quite a few French idioms here, as Brassens moves on to informal (even slang-ish) language: 'il faut que' + subj ('fasse') is quite common and fits in any language level. But this colloquial usage of 'en' is an example of what makes pronouns a challenge to French learners. It&#8217;s used to put emphasis. E.g. 'Il en sait, des choses' = 'he really knows a lot'. In this example, 'en' refers to 'des choses', therefore the phrase contains some repetition, which is where the emphasis comes from. Similarly, 'Il faudra qu&#8217;il en fasse, des tours…' = 'he will have to do many, many rounds…' (implying that he will never succeed). Note that this redundant use of a pronoun is not limited to 'en'. I let you guess the meaning of 'Je la connais, ton histoire'; 'Je ne lui doit rien, à ce type', or simply 'Elle est belle, cette maison'. These colloquial forms are extremely common in spoken French.">53</abbr>]</sup><br>
+Des tours d&#8217;horloge, de sablier<br>
+Et la petite pisseuse<sup class="footnote">[<abbr title="Slang, derogatory term for a young girl or younger woman – typically used to imply that she is being insolent or is too inexperienced to be credible.">54</abbr>]</sup> d&#8217;en face<br>
+Peut bien aller se rhabiller<sup class="footnote">[<abbr title="More slang: 'se rhabiller' can mean 'put one&#8217;s clothes back on' – and Brassens does refer to this literal meaning, saying 'I&#8217;m not impressed by the insolent youth of your naked body, I prefer my older lover'. But, very smartly, he also plays with the slang figurative sense: 'tu peux aller te rhabiller!' = 'eat your heart out!'.">55</abbr>]</sup>&#8230;&#8203;</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">He is gloomy, he is taciturn<br>
+He rules over the things of Time<br>
+He bears a nice name, Saturn,<br>
+But he is quite an ominous God<br>
+<br>
+While morosely going about<br>
+To relieve his boredom a bit<br>
+He plays at shaking roses up<br>
+Time kills time as he can<br>
+<br>
+This season it&#8217;s you, my beloved,<br>
+Who bore the brunt of his game<br>
+You who paid the "gabelle"<br>
+A grain of salt in your hair<br>
+<br>
+They are not bad, autumn flowers<br>
+And all the poets have said so<br>
+I look at you and I bet my boots<br>
+That they did not lie<br>
+<br>
+Come still, come, my favourite<br>
+Let&#8217;s go down to the garden together<br>
+Come and pluck the daisy<br>
+Of St. Martin&#8217;s summer<br>
+<br>
+I know all your graces by heart<br>
+And to make me forget them<br>
+It will take Saturn so many<br>
+Rounds of clock, of hourglass.<br>
+And the little (she) brat across the street<br>
+Can go eat her heart out/get dressed&#8230;&#8203;</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
