added xrefs pointing to new songs

--- a/pierre_stuff/1.0/music/brassens.html
+++ b/pierre_stuff/1.0/music/brassens.html
@@ -176,7 +176,10 @@
 <p><a href="love_songs.html#nondemande" class="page">La Non Demande en Mariage</a></p>
 </li>
 <li>
-<p>Les Passantes</p>
+<p><a href="love_songs.html#passantes" class="page">Les Passantes</a></p>
+</li>
+<li>
+<p><a href="love_songs.html#saturne" class="page">Saturne</a></p>
 </li>
 </ul>
 </div>
@@ -187,6 +190,9 @@
 <ul>
 <li>
 <p><a href="songs_to_normal_people.html#penelope" class="page">Pénélope</a></p>
+</li>
+<li>
+<p><a href="songs_to_normal_people.html#joueur" class="page">Le Petit Joueur de Flûteau</a></p>
 </li>
 </ul>
 </div>
