added note about misaligned columns

--- a/pierre_stuff/1.0/music/love_songs.html
+++ b/pierre_stuff/1.0/music/love_songs.html
@@ -308,6 +308,18 @@ May I think always.<br>
 <div class="paragraph">
 <p>Pol&#8217;s language is more straightforward than Brassens', therefore my comments will be shorter than usual. But, wonderfully highlighted by the music, this poem is irresistibly romantic… The romantic melody and Brassens' perfect diction, slightly "after the beat", give each word a special treatment. And, better than in any other song, the music treats us with "hanging moments", delays before key words that give them so much impact!</p>
 </div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The side-by-side columns of text may be misaligned when viewing on a mobile. If that happens, rotate the screen to view it in landscape mode.
+</td>
+</tr>
+</table>
+</div>      
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 50%;">
@@ -428,6 +440,18 @@ Whom you were not able to retain<br></p></td>
 <div class="paragraph">
 <p><em>(The last two lines of each verse are repeated twice, except in the last verse.)</em></p>
 </div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The side-by-side columns of text may be misaligned when viewing on a mobile. If that happens, rotate the screen to view it in landscape mode.
+</td>
+</tr>
+</table>
+</div>    
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 50%;">
